--- a/AutomatisationGlobaleInc/project.json
+++ b/AutomatisationGlobaleInc/project.json
@@ -4,6 +4,10 @@
   "description": "Exercice 15",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.DocumentUnderstanding.Activities": "[2.15.0-preview]",
+    "UiPath.Excel.Activities": "[3.0.1]",
+    "UiPath.GSuite.Activities": "[3.2.0-preview]",
+    "UiPath.MicrosoftOffice365.Activities": "[3.2.0-preview]",
     "UiPath.System.Activities": "[25.4.2]"
   },
   "webServices": [],
